<resources>
    <string name="app_name">fitness courses</string>
    <string name="home">Home</string>
    <string name="task">Exercise</string>
    <string name="calculator">Calculator</string>
    <string name="setting">Setting</string>
    <string name="start">Start</string>
    <string name="favourite">My favourite</string>
    <string name="instruction">Excerice instruction</string>
    <string name="your_weight">Enter Your weight</string>
    <string name="your_Height">Enter Your Height</string>
    <string name="Inches">Inches</string>
    <string name="Feet">Feet</string>
    <string name="Calculate">Calculate</string>



    <string name="ADMOB_Unit_ID" translatable="false">ca-app-pub-1091943052558531~4807302413</string>
    <string name="google_baner">ca-app-pub--1091943052558531/5377329819</string>
    <string name="g_inr">ca-app-pub-1091943052558531/4891595723</string>
    <string name="g_native">ca-app-pub-1091943052558531/5756603761</string>
    <string name="numberzero">0</string>
    <string name="privecy">prives</string>
    <string name="rateapp">rateapp</string>
    <string name="numberone">0</string>


</resources>