<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="55dp"
    android:paddingBottom="60dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:divider="@android:color/transparent"
                android:dividerHeight="0px"
                android:orientation="vertical"
                app:cardBackgroundColor="@color/TextColor"
                app:cardCornerRadius="15dp"
                app:cardPreventCornerOverlap="true">

                <TextView
                    android:id="@+id/tv_heading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center_horizontal|center_vertical"
                    android:background="@color/TextColor"
                    android:gravity="center"
                    android:text="@string/calculator"
                    android:textColor="#ffffff"
                    android:textSize="32dp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inp_lay1"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:textColorHint="@color/light_black"
                        app:hintTextAppearance="@style/MyAppearance">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/weight_field"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="20dp"
                            android:background="@null"
                            android:digits="0123456789"
                            android:gravity="left|center_vertical|center_horizontal|center"
                            android:hint="@string/your_weight"
                            android:inputType="number"
                            android:textColor="@color/black"
                            android:textColorHint="@color/colorPrimary"
                            android:textCursorDrawable="@drawable/byad_white"
                            android:textSize="15dp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/black" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_height"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="left|center_vertical"
                    android:text="@string/your_Height"
                    android:textAlignment="viewEnd"
                    android:textColor="#333333"
                    android:textSize="20dp"
                    android:textStyle="italic" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inp_lay3"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:textColorHint="@color/light_black"
                        app:hintTextAppearance="@style/MyAppearance">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/inch_field"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:digits="0123456789"
                            android:gravity="center"
                            android:hint="@string/Inches"
                            android:inputType="number"
                            android:textColor="@color/black"
                            android:textColorHint="@color/white"
                            android:textCursorDrawable="@drawable/byad_white"
                            android:textSize="15dp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/black" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inp_lay2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:textColorHint="@color/light_black"
                        app:hintTextAppearance="@style/MyAppearance">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/feet_field"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@null"
                            android:digits="0123456789"
                            android:gravity="center"
                            android:hint="@string/Feet"
                            android:inputType="number"
                            android:textColor="@color/black"
                            android:textColorHint="@color/white"
                            android:textCursorDrawable="@drawable/byad_white"
                            android:textSize="15dp"
                            android:textStyle="bold" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/black" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/result_sect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:visibility="gone">


                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:divider="@android:color/transparent"
                    android:dividerHeight="0px"
                    android:orientation="vertical"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="8dp"
                    app:cardPreventCornerOverlap="true">

                    <TextView
                        android:id="@+id/tv_result"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="Result"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp">

                    <TextView
                        android:id="@+id/tv_mass_status"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="Your mass status : "
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/val_mas_status"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@+id/tv_mass_status"
                        android:gravity="center"
                        android:text="Un Defined"
                        android:textColor="@color/color1"
                        android:textSize="13dp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp">

                    <TextView
                        android:id="@+id/tv_you_bmi"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="Your BMI : "
                        android:textColor="@color/black"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/val_bmi"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@+id/tv_you_bmi"
                        android:gravity="center"
                        android:text="0.0"
                        android:textColor="@color/color1"
                        android:textSize="13dp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_calculate"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="45dp"
                android:background="@drawable/gradien_ts2_gras"
                android:gravity="center"
                android:shadowColor="#6A3737"
                android:text="@string/Calculate"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
