<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bannerContainer">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="3dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="0px"
            android:elevation="3dp"
            android:orientation="vertical"
            app:cardElevation="3dp"
            app:cardPreventCornerOverlap="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradien_ts1_gras">

                <ImageView
                    android:id="@+id/exit_btn"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:padding="3dp"
                    android:src="@drawable/ic_baseline_chevron_left_24"
                    app:tint="@color/white" />

                <TextView
                    android:id="@+id/excerise_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/exit_btn"
                    android:gravity="left|center_vertical|center_horizontal|center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/favourite"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/like_unlike_btn"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/gradien_ts2_gras"
                    android:backgroundTint="@color/white"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/lile_icon"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:padding="3dp"
                        android:src="@drawable/ic_baseline_directions_run_24" />
                </RelativeLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_section"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <RelativeLayout
                android:id="@+id/workout_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="45dp"
                android:orientation="vertical"
                android:visibility="visible">



                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/youga_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/excerise_instruction"
                    android:padding="20dp"
                    android:src="@drawable/ab" />

                <TextView
                    android:id="@+id/excerise_instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="left|center_vertical|center_horizontal|center"
                    android:text="@string/instruction"
                    android:textAlignment="viewStart"
                    android:textColor="#B9000000"
                    android:textSize="14dp"
                    android:textStyle="normal" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/rest_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="45dp"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/rest_image"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:padding="20dp"
                    android:src="@drawable/ab" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="Please rest sum time"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottom_section"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/timer_section"
                android:layout_width="85dp"

                android:layout_height="100dp"
                android:layout_marginTop="17dp">


                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="8dp"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="80"
                    android:progressDrawable="@drawable/progressbas_cus"
                    android:secondaryProgress="0" />

                <TextView
                    android:id="@+id/counter"
                    android:layout_width="22dp"
                    android:layout_height="27dp"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="35dp"
                    android:layout_marginTop="38dp"
                    android:background="@drawable/khalfiya_bayda"
                    android:gravity="center"
                    android:maxLength="2"
                    android:text="00"
                    android:textColor="#333"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_toRightOf="@+id/timer_section"
                android:padding="8dp">

                <TextView
                    android:id="@+id/start_btn_text"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/gradien_ts2_gras"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/start"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bannerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="vertical" />
</RelativeLayout>
